@@ -117,6 +117,11 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <argLine>
+            --enable-preview
+          </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -150,6 +155,7 @@
           <environmentVariables>
             <HAZE_PORT>6380</HAZE_PORT>
           </environmentVariables>
+          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
     </plugins>
